--- a/Views/SingleNotePageView.axaml
+++ b/Views/SingleNotePageView.axaml
@@ -3,13 +3,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="ToDoApp.Views.HomePageView">
-	<Grid ColumnDefinitions="*,*">
-		<Border Grid.Column="0">
-			<TransitioningContentControl Content="{Binding SingleNoteView}"/>
-		</Border>
-		<Border Grid.Column="1">
-			<TransitioningContentControl Content="{Binding NotesView}"/>
-		</Border>
-	</Grid>
+             x:Class="ToDoApp.Views.SingleNotePageView">
+	<TextBlock Text="Select Note!" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 </UserControl>
