--- a/Views/NotesPageView.axaml
+++ b/Views/NotesPageView.axaml
@@ -22,8 +22,32 @@
 						Margin="4,0,0,0"/>
 			</Grid>
 		<Grid Grid.Row="1">
+			<ListBox Background="Transparent"
+					 ItemsSource="{Binding Notes}">
+				<ListBox.ItemTemplate>
+					<DataTemplate>
+						<Border Background="{Binding Background}"
+                                CornerRadius="10"
+                                Margin="8"
+                                Padding="10"
+                                BorderThickness="0">
+							<StackPanel>
+								<TextBlock Text="{Binding Title}"
+                                           FontSize="16"
+                                           FontWeight="Bold"
+                                           Foreground="{Binding Foreground}"
+                                           Margin="0,0,0,5"/>
+								<TextBlock Text="{Binding Content}"
+                                           TextWrapping="Wrap"
+                                           Foreground="{Binding Foreground}"
+                                           FontSize="14"/>
+							</StackPanel>
+						</Border>
+					</DataTemplate>
+				</ListBox.ItemTemplate>
+			</ListBox>
 			<Button Content="+"
-					Command="{Binding AddNoteCommand}"
+					Command="{Binding GoToAddNoteCommand}"
 					FontSize="18"
 					Margin="8"
 					ZIndex="1"
@@ -36,5 +60,4 @@
 					CornerRadius="21"/>
 		</Grid>
 	</Grid>
-		  
 </UserControl>
